Updates from zephyr

--- a/MusicBrainz/Picard.ini
+++ b/MusicBrainz/Picard.ini
@@ -1,28 +1,31 @@
 [application]
-version=2.4.2.final0
+version=2.5.2.final0
 
 [persist]
-album_view_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x2\x1\0\0\0\0\0\0\0\0\0\0\0\xe\xf8?\0\0\0\v\0\0\0\x4\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\r\0\0\0\x64\0\0\0\f\0\0\0\x64\0\0\0\v\0\0\0\x64\0\0\0\n\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\x3\xbb\0\0\0\xe\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\xe\0\0\x2O\0\0\0\x1\0\0\0\0\0\0\0R\0\0\0\x1\0\0\0\0\0\0\x1\x1a\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\x1\0\0\0\x64)
-bottom_splitter_state=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\x1\x8f\0\0\x1\xf2\x1\0\0\0\x1\x1\0\0\0\x2\0)
+album_view_header_locked=false
+album_view_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\xe\xf8?\0\0\0\v\0\0\0\n\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\0\x4\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\r\0\0\0\x64\0\0\0\f\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\v\0\0\0\x64\0\0\x3\xbb\0\0\0\xe\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\xe\0\0\x2\xb5\0\0\0\x1\0\0\0\0\0\0\0R\0\0\0\x1\0\0\0\0\0\0\0\xb4\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\x3\xe8\x1\0\0\0\x64)
+bottom_splitter_state=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\x1n\0\0\0\xca\0\xff\xff\xff\xff\x1\0\0\0\x2\0)
 current_browser_path=/home/hbush
-current_directory=/home/hbush/mp3s/Music/A/Alisha's Attic
-file_view_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x2\x1\0\0\0\0\0\0\0\0\0\0\0\xe\xf8?\0\0\0\v\0\0\0\x4\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\r\0\0\0\x64\0\0\0\f\0\0\0\x64\0\0\0\v\0\0\0\x64\0\0\0\n\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\x3\xbc\0\0\0\xe\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\xe\0\0\x2\x36\0\0\0\x1\0\0\0\0\0\0\0\x32\0\0\0\x1\0\0\0\0\0\0\x1T\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\x1\0\0\0\x64)
-geometry_AlbumInfoDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1\x13\0\0\x5\xf5\0\0\x3\xad\0\0\a\xc1\0\0\x1\x14\0\0\x6\r\0\0\x3\xac\0\0\a\xc0\0\0\0\0\0\0\0\0\a\x80\0\0\x1\x14\0\0\x6\r\0\0\x3\xac\0\0\a\xc0)
+current_directory=/home/hbush/tmp/music/flac/juv2
+file_view_header_locked=false
+file_view_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\a\x1\0\0\0\xe\0\0\0\0\0\0\0\x1\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\a\0\0\0\x2\0\0\0\b\0\0\0\t\0\0\0\n\0\0\0\v\0\0\0\f\0\0\0\r\0\0\0\xe\0\0\0\0\0\0\0\x1\0\0\0\a\0\0\0\x2\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\b\0\0\0\t\0\0\0\n\0\0\0\v\0\0\0\f\0\0\0\r\0\0\0\xe\xf0?\0\0\0\n\0\0\0\n\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\0\x4\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\r\0\0\0\x64\0\0\0\f\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\v\0\0\0\x64\0\0\x2\xd5\0\0\0\xe\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\xe\0\0\x1\n\0\0\0\x1\0\0\0\0\0\0\0\x32\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x1\x35\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\x3\xe8\x1\0\0\x1$)
+geometry_AlbumInfoDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\xc2\0\0\x5\x12\0\0\x5\\\0\0\x6\xd9\0\0\x2\xc3\0\0\x5%\0\0\x5[\0\0\x6\xd8\0\0\0\0\0\0\0\0\x6\0\0\0\x2\xc3\0\0\x5%\0\0\x5[\0\0\x6\xd8)
 geometry_CAATypesSelectorDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x30\0\0\x1?\0\0\x3\xd5\0\0\x3$\0\0\0\x31\0\0\x1W\0\0\x3\xd4\0\0\x3#\0\0\0\0\0\0\0\0\a\x80\0\0\0\x31\0\0\x1W\0\0\x3\xd4\0\0\x3#)
 geometry_ClusterInfoDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2i\0\0\x4T\0\0\x5\x3\0\0\x6 \0\0\x2j\0\0\x4l\0\0\x5\x2\0\0\x6\x1f\0\0\0\0\0\0\0\0\a\x80\0\0\x2j\0\0\x4l\0\0\x5\x2\0\0\x6\x1f)
-geometry_FileInfoDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2i\0\0\0K\0\0\a\x15\0\0\x4\x37\0\0\x2j\0\0\0\x63\0\0\a\x14\0\0\x4\x36\0\0\0\0\0\0\0\0\a\x80\0\0\x2j\0\0\0\x63\0\0\a\x14\0\0\x4\x36)
-geometry_HistoryView=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6\xff\xff\xff\xff\0\0\0\0\a\x80\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6)
-geometry_LogView=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6\xff\xff\xff\xff\0\0\0\0\a\x80\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6)
-geometry_MainWindow=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0!\0\0\a\x7f\0\0\x4\x37\0\0\0\0\0\0\x4l\0\0\a\x7f\0\0\bj\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\x39\0\0\a\x7f\0\0\x4\x37)
+geometry_EditTagDialog="@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\b\xc9\0\0\x3\x3\0\0\nZ\0\0\x4-\0\0\b\xca\0\0\x3\x1b\0\0\nY\0\0\x4,\0\0\0\x1\0\0\0\0\x4\x38\0\0\b\xca\0\0\x3\x1b\0\0\nY\0\0\x4,)"
+geometry_FileInfoDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2i\0\0\x4T\0\0\a\x15\0\0\b@\0\0\x2j\0\0\x4l\0\0\a\x14\0\0\b?\0\0\0\0\0\0\0\0\a\x80\0\0\x2j\0\0\x4l\0\0\a\x14\0\0\b?)
+geometry_HistoryView=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6)
+geometry_LogView=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6)
+geometry_MainWindow=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\a'\0\0\x4T\0\0\v`\0\0\v\xd4\0\0\a(\0\0\x4l\0\0\v_\0\0\v\xd3\0\0\0\x1\0\0\0\0\x4\x38\0\0\a(\0\0\x4l\0\0\v_\0\0\v\xd3)
 geometry_OptionsDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0s\0\0\x1x\0\0\x3\x94\0\0\x4\x37\0\0\0t\0\0\x1\x90\0\0\x3\x93\0\0\x4\x36\0\0\0\0\0\0\0\0\a\x80\0\0\0t\0\0\x1\x90\0\0\x3\x93\0\0\x4\x36)
 geometry_TrackInfoDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2i\0\0\x1\x1e\0\0\x5\x3\0\0\x2\xea\0\0\x2j\0\0\x1\x36\0\0\x5\x2\0\0\x2\xe9\0\0\0\0\0\0\0\0\a\x80\0\0\x2j\0\0\x1\x36\0\0\x5\x2\0\0\x2\xe9)
 geometry_TrackSearchDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2M\0\0\x1\x44\0\0\x5\x1e\0\0\x2\xc4\0\0\x2N\0\0\x1\\\0\0\x5\x1d\0\0\x2\xc3\0\0\0\0\0\0\0\0\a\x80\0\0\x2N\0\0\x1\\\0\0\x5\x1d\0\0\x2\xc3)
 last_selected_script_pos=-1
 mediaplayer_playback_rate=1
 mediaplayer_volume=50
-metadatabox_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x6\xce\0\0\0\x3\0\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0}\xff\xff\xff\xff\0\0\0\x84\0\0\0\0\0\0\0\x3\0\0\0\xd2\0\0\0\x1\0\0\0\0\0\0\x1\xf0\0\0\0\x1\0\0\0\0\0\0\x4\f\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0})
-oauth_access_token=R1wuql2eL57_NqAnykj-qw
-oauth_access_token_expires=1599754143
+metadatabox_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x3\x9b\0\0\0\x3\0\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0}\xff\xff\xff\xff\0\0\0\x84\0\0\0\0\0\0\0\x3\0\0\x1.\0\0\0\x1\0\0\0\0\0\0\x1\xf0\0\0\0\x1\0\0\0\0\0\0\0}\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0})
+oauth_access_token=HO5yVjywtTtlq5y32JJzCvxJ-hiuFVH5
+oauth_access_token_expires=1607528280
 oauth_refresh_token=NONQz8_M_nEGPxLyag-Xhw
 oauth_refresh_token_scopes=profile tag rating collection submit_isrc submit_barcode
 oauth_username=spookypeanut
@@ -31,13 +34,13 @@ plugins_list_sort_order=0
 plugins_list_sort_section=0
 plugins_list_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\v\0\0\0\x3\x1\x1\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0}\xff\xff\xff\xff\0\0\0\x81\0\0\0\x2\0\0\0\x3\0\0\x1Z\0\0\0\x1\0\0\0\x1\0\0\0Y\0\0\0\x1\0\0\0\x3\0\0\0X\0\0\0\x1\0\0\0\x3\0\0\x3\xe8\0\0\0\0})
 scripting_splitter=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0x\0\0\0U\0\xff\xff\xff\xff\x1\0\0\0\x1\0)
-splitter_state=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x3\0\0\0U\0\0\x1\0\0\0\x1\0\x1\xff\xff\xff\xff\x1\0\0\0\x1\0)
+splitter_state=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x3\0\0\0\0\0\0\x2\xd7\0\0\x1\\\0\xff\xff\xff\xff\x1\0\0\0\x1\0)
 tracksearchdialog_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\a\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x5\xc4\0\0\0\b\0\x1\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0}\xff\xff\xff\xff\0\0\0\x84\0\0\0\0\0\0\0\b\0\0\x1\x11\0\0\0\x1\0\0\0\0\0\0\0U\0\0\0\x1\0\0\0\0\0\0\x1S\0\0\0\x1\0\0\0\0\0\0\x1\x84\0\0\0\x1\0\0\0\0\0\0\0V\0\0\0\x1\0\0\0\0\0\0\0]\0\0\0\x1\0\0\0\0\0\0\0\x8b\0\0\0\x1\0\0\0\0\0\0\0I\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0})
 view_cover_art=true
 view_file_browser=false
 view_toolbar=true
-window_maximized=true
-window_state=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\0\0\0\a\x80\0\0\x3\x82\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\x2\0\0\0\x2\0\0\0\x2\0\0\0\x18\0m\0\x61\0i\0n\0_\0t\0o\0o\0l\0\x62\0\x61\0r\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\x1c\0s\0\x65\0\x61\0r\0\x63\0h\0_\0t\0o\0o\0l\0\x62\0\x61\0r\x1\0\0\x3\xd0\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\x3\0\0\0\x1\0\0\0\x1c\0p\0l\0\x61\0y\0\x65\0r\0_\0t\0o\0o\0l\0\x62\0\x61\0r\0\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0)
+window_maximized=false
+window_state=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\0\0\0\x4\x38\0\0\x6\xeb\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\x2\0\0\0\x2\0\0\0\x2\0\0\0\x18\0m\0\x61\0i\0n\0_\0t\0o\0o\0l\0\x62\0\x61\0r\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\x1c\0s\0\x65\0\x61\0r\0\x63\0h\0_\0t\0o\0o\0l\0\x62\0\x61\0r\x1\0\0\x3h\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\x3\0\0\0\x1\0\0\0\x1c\0p\0l\0\x61\0y\0\x65\0r\0_\0t\0o\0o\0l\0\x62\0\x61\0r\0\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0)
 
 [setting]
 aac_save_ape=true
@@ -52,7 +55,7 @@ browser_integration=true
 browser_integration_localhost_only=true
 browser_integration_port=8000
 builtin_search=false
-ca_providers=@Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x1d\x80\x4\x95\x12\0\0\0\0\0\0\0\x8c\vLocal Files\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x1c\x80\x4\x95\x11\0\0\0\0\0\0\0\x8c\nTheAudioDB\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0#\x80\x4\x95\x18\0\0\0\0\0\0\0\x8c\x11\x43over Art Archive\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x1b\x80\x4\x95\x10\0\0\0\0\0\0\0\x8c\tWhitelist\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0!\x80\x4\x95\x16\0\0\0\0\0\0\0\x8c\xf\x43\x61\x61ReleaseGroup\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x18\x80\x4\x95\r\0\0\0\0\0\0\0\x8c\x6\x41mazon\x94\x88\x86\x94.)
+ca_providers=@Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x1d\x80\x4\x95\x12\0\0\0\0\0\0\0\x8c\vLocal Files\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x1c\x80\x4\x95\x11\0\0\0\0\0\0\0\x8c\nTheAudioDB\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0#\x80\x4\x95\x18\0\0\0\0\0\0\0\x8c\x11\x43over Art Archive\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\"\x80\x4\x95\x17\0\0\0\0\0\0\0\x8c\x10UrlRelationships\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0!\x80\x4\x95\x16\0\0\0\0\0\0\0\x8c\xf\x43\x61\x61ReleaseGroup\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x18\x80\x4\x95\r\0\0\0\0\0\0\0\x8c\x6\x41mazon\x94\x88\x86\x94.)
 caa_approved_only=false
 caa_image_size=500
 caa_image_type_as_filename=false
@@ -98,7 +101,7 @@ max_genres=5
 min_genre_usage=90
 move_additional_files=true
 move_additional_files_pattern=*.jpg *.png *.cue *.toc *.m3u *.log *.mov *.m4v *.mpg source
-move_files=true
+move_files=false
 move_files_to=/home/hbush/mp3s/NewMusic/library
 only_my_genres=false
 preferred_release_countries=@Variant(\0\0\0\t\0\0\0\x1\0\0\0\n\0\0\0\x4\0G\0\x42)
