--- a/MusicBrainz/Picard-2.5.2.ini
+++ b/MusicBrainz/Picard-2.5.2.ini
@@ -1,14 +1,14 @@
 [application]
-version=2.5.5.final0
+version=2.5.2.final0
 
 [persist]
 album_view_header_locked=false
-album_view_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x10\xf8?\0\0\0\v\0\0\0\f\0\0\0\x64\0\0\0\r\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\x4\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\n\0\0\0\x64\0\0\0\v\0\0\0\x64\0\0\x4\x83\0\0\0\x10\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x10\0\0\x2\xb5\0\0\0\x1\0\0\0\0\0\0\0R\0\0\0\x1\0\0\0\0\0\0\0\xb4\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x3\xe8\x1\0\0\0\x64)
+album_view_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\xe\xf8?\0\0\0\v\0\0\0\a\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\0\x4\0\0\0\x64\0\0\0\v\0\0\0\x64\0\0\0\n\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\r\0\0\0\x64\0\0\0\f\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\x3\xbb\0\0\0\xe\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\xe\0\0\x2\xb5\0\0\0\x1\0\0\0\0\0\0\0R\0\0\0\x1\0\0\0\0\0\0\0\xb4\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\x3\xe8\x1\0\0\0\x64)
 bottom_splitter_state=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\x1n\0\0\0\xca\0\xff\xff\xff\xff\x1\0\0\0\x2\0)
 current_browser_path=/home/hbush
 current_directory=/home/hbush/tmp/music/flac/juv2
 file_view_header_locked=false
-file_view_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\a\x1\0\0\0\x10\0\0\0\0\0\0\0\x3\0\0\0\x2\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\a\0\0\0\x1\0\0\0\b\0\0\0\t\0\0\0\n\0\0\0\v\0\0\0\f\0\0\0\r\0\0\0\xe\0\0\0\xf\0\0\0\x10\0\0\0\0\0\0\0\a\0\0\0\x2\0\0\0\x1\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\b\0\0\0\t\0\0\0\n\0\0\0\v\0\0\0\f\0\0\0\r\0\0\0\xe\0\0\0\xf\0\0\0\x10\xf0?\0\0\0\n\0\0\0\f\0\0\0\x64\0\0\0\r\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\x4\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\n\0\0\0\x64\0\0\0\v\0\0\0\x64\0\0\x6\x99\0\0\0\x10\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x10\0\0\x1\x64\0\0\0\x1\0\0\0\0\0\0\0X\0\0\0\x1\0\0\0\0\0\0\x1$\0\0\0\x1\0\0\0\0\0\0\x3#\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x32\0\0\0\x1\0\0\0\0\0\0\x3\xe8\x1\0\0\0\x32)
+file_view_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\a\x1\0\0\0\xe\0\0\0\0\0\0\0\x3\0\0\0\x2\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\a\0\0\0\x1\0\0\0\b\0\0\0\t\0\0\0\n\0\0\0\v\0\0\0\f\0\0\0\r\0\0\0\xe\0\0\0\0\0\0\0\a\0\0\0\x2\0\0\0\x1\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\b\0\0\0\t\0\0\0\n\0\0\0\v\0\0\0\f\0\0\0\r\0\0\0\xe\xf0?\0\0\0\n\0\0\0\x6\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\0\x4\0\0\0\x64\0\0\0\v\0\0\0\x64\0\0\0\n\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\r\0\0\0\x64\0\0\0\f\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\x5\xda\0\0\0\xe\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\xe\0\0\0\xe4\0\0\0\x1\0\0\0\0\0\0\0\xaf\0\0\0\x1\0\0\0\0\0\0\x1$\0\0\0\x1\0\0\0\0\0\0\x3#\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\x3\xe8\x1\0\0\0\x32)
 geometry_AlbumInfoDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\xc2\0\0\x5\x12\0\0\x5\\\0\0\x6\xd9\0\0\x2\xc3\0\0\x5%\0\0\x5[\0\0\x6\xd8\0\0\0\0\0\0\0\0\x6\0\0\0\x2\xc3\0\0\x5%\0\0\x5[\0\0\x6\xd8)
 geometry_CAATypesSelectorDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x30\0\0\x1?\0\0\x3\xd5\0\0\x3$\0\0\0\x31\0\0\x1W\0\0\x3\xd4\0\0\x3#\0\0\0\0\0\0\0\0\a\x80\0\0\0\x31\0\0\x1W\0\0\x3\xd4\0\0\x3#)
 geometry_ClusterInfoDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2i\0\0\x4T\0\0\x5\x3\0\0\x6 \0\0\x2j\0\0\x4l\0\0\x5\x2\0\0\x6\x1f\0\0\0\0\0\0\0\0\a\x80\0\0\x2j\0\0\x4l\0\0\x5\x2\0\0\x6\x1f)
@@ -17,26 +17,26 @@ geometry_FileInfoDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2i\0\0\x4T\0\0\
 geometry_HistoryView=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\x2\xa8\0\0\x2\x39\0\0\x4\x37\0\0\0\0\0\0\x2\xa8\0\0\x2\x39\0\0\x4\x37\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\x2\xa8\0\0\x2\x39\0\0\x4\x37)
 geometry_LogView=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\x2\xa8\0\0\x2\x39\0\0\x4\x37\0\0\0\0\0\0\x2\xa8\0\0\x2\x39\0\0\x4\x37\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\x2\xa8\0\0\x2\x39\0\0\x4\x37)
 geometry_MainWindow=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0!\0\0\a\x7f\0\0\x4\x37\0\0\x3H\0\0\0\x35\0\0\a\x7f\0\0\a\x9c\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\x39\0\0\a\x7f\0\0\x4\x37)
-geometry_OptionsDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2X\0\0\0X\0\0\x5y\0\0\x3 \0\0\x2Y\0\0\0p\0\0\x5x\0\0\x3\x1f\0\0\0\0\0\0\0\0\a\x80\0\0\x2Y\0\0\0p\0\0\x5x\0\0\x3\x1f)
+geometry_OptionsDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0s\0\0\x1x\0\0\x3\x94\0\0\x4\x37\0\0\0t\0\0\x1\x90\0\0\x3\x93\0\0\x4\x36\0\0\0\0\0\0\0\0\a\x80\0\0\0t\0\0\x1\x90\0\0\x3\x93\0\0\x4\x36)
 geometry_TrackInfoDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2i\0\0\x1\x1e\0\0\x5\x3\0\0\x2\xea\0\0\x2j\0\0\x1\x36\0\0\x5\x2\0\0\x2\xe9\0\0\0\0\0\0\0\0\a\x80\0\0\x2j\0\0\x1\x36\0\0\x5\x2\0\0\x2\xe9)
 geometry_TrackSearchDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2M\0\0\x1\x44\0\0\x5\x1e\0\0\x2\xc4\0\0\x2N\0\0\x1\\\0\0\x5\x1d\0\0\x2\xc3\0\0\0\0\0\0\0\0\a\x80\0\0\x2N\0\0\x1\\\0\0\x5\x1d\0\0\x2\xc3)
 last_selected_script_pos=-1
 mediaplayer_playback_rate=1
 mediaplayer_volume=50
-metadatabox_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x6\xce\0\0\0\x3\0\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0}\xff\xff\xff\xff\0\0\0\x84\0\0\0\0\0\0\0\x3\0\0\x1.\0\0\0\x1\0\0\0\0\0\0\x1\xf0\0\0\0\x1\0\0\0\0\0\0\x3\xb0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0})
-oauth_access_token=RggiHh_7OBDimHpk1a8-wRGJP_sQSiWl
-oauth_access_token_expires=1609525798
+metadatabox_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x6\xea\0\0\0\x3\0\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0}\xff\xff\xff\xff\0\0\0\x84\0\0\0\0\0\0\0\x3\0\0\x1.\0\0\0\x1\0\0\0\0\0\0\x1\xf0\0\0\0\x1\0\0\0\0\0\0\x3\xcc\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0})
+oauth_access_token=LoHXbncY2vKaFDaLB85axMDivqPxehZz
+oauth_access_token_expires=1608047224
 oauth_refresh_token=NONQz8_M_nEGPxLyag-Xhw
 oauth_refresh_token_scopes=profile tag rating collection submit_isrc submit_barcode
 oauth_username=spookypeanut
-options_last_active_page=filerenaming
+options_last_active_page=tags_compatibility_id3
 options_pages_tree_state=@Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x19\x80\x4\x95\xe\0\0\0\0\0\0\0\x8c\ageneral\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x1a\x80\x4\x95\xf\0\0\0\0\0\0\0\x8c\bmetadata\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x1a\x80\x4\x95\xf\0\0\0\0\0\0\0\x8c\breleases\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x18\x80\x4\x95\r\0\0\0\0\0\0\0\x8c\x6genres\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x19\x80\x4\x95\xe\0\0\0\0\0\0\0\x8c\aratings\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x16\x80\x4\x95\v\0\0\0\0\0\0\0\x8c\x4tags\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0(\x80\x4\x95\x1d\0\0\0\0\0\0\0\x8c\x16tags_compatibility_id3\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0(\x80\x4\x95\x1d\0\0\0\0\0\0\0\x8c\x16tags_compatibility_aac\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0(\x80\x4\x95\x1d\0\0\0\0\0\0\0\x8c\x16tags_compatibility_ac3\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0)\x80\x4\x95\x1e\0\0\0\0\0\0\0\x8c\x17tags_compatibility_wave\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x17\x80\x4\x95\f\0\0\0\0\0\0\0\x8c\x5\x63over\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0#\x80\x4\x95\x18\0\0\0\0\0\0\0\x8c\x11\x63over_art_archive\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x1d\x80\x4\x95\x12\0\0\0\0\0\0\0\x8c\vlocal_files\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x1e\x80\x4\x95\x13\0\0\0\0\0\0\0\x8c\ffilerenaming\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0 \x80\x4\x95\x15\0\0\0\0\0\0\0\x8c\xe\x66ingerprinting\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x1a\x80\x4\x95\xf\0\0\0\0\0\0\0\x8c\bcdlookup\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x19\x80\x4\x95\xe\0\0\0\0\0\0\0\x8c\aplugins\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x1c\x80\x4\x95\x11\0\0\0\0\0\0\0\x8c\ntheaudiodb\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x1b\x80\x4\x95\x10\0\0\0\0\0\0\0\x8c\tinterface\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\"\x80\x4\x95\x17\0\0\0\0\0\0\0\x8c\x10interface_colors\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0$\x80\x4\x95\x19\0\0\0\0\0\0\0\x8c\x12interface_top_tags\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x1b\x80\x4\x95\x10\0\0\0\0\0\0\0\x8c\tscripting\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x1a\x80\x4\x95\xf\0\0\0\0\0\0\0\x8c\badvanced\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x19\x80\x4\x95\xe\0\0\0\0\0\0\0\x8c\anetwork\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x1a\x80\x4\x95\xf\0\0\0\0\0\0\0\x8c\bmatching\x94\x88\x86\x94.)
 options_splitter=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0\xbe\0\0\x2\x62\x1\xff\xff\xff\xff\x1\0\0\0\x1\0)
 plugins_list_sort_order=0
 plugins_list_sort_section=0
-plugins_list_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\x1f\0\0\0\x3\x1\x1\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0}\xff\xff\xff\xff\0\0\0\x81\0\0\0\x2\0\0\0\x3\0\0\x1Z\0\0\0\x1\0\0\0\x1\0\0\0^\0\0\0\x1\0\0\0\x3\0\0\0g\0\0\0\x1\0\0\0\x3\0\0\x3\xe8\0\0\0\0})
+plugins_list_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\v\0\0\0\x3\x1\x1\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0}\xff\xff\xff\xff\0\0\0\x81\0\0\0\x2\0\0\0\x3\0\0\x1Z\0\0\0\x1\0\0\0\x1\0\0\0Y\0\0\0\x1\0\0\0\x3\0\0\0X\0\0\0\x1\0\0\0\x3\0\0\x3\xe8\0\0\0\0})
 scripting_splitter=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0x\0\0\0U\0\xff\xff\xff\xff\x1\0\0\0\x1\0)
-splitter_state=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x3\0\0\0U\0\0\x3k\0\0\x4\x10\0\xff\xff\xff\xff\x1\0\0\0\x1\0)
+splitter_state=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x3\0\0\0U\0\0\x3J\0\0\0\xe9\0\xff\xff\xff\xff\x1\0\0\0\x1\0)
 tracksearchdialog_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\a\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x5\xc4\0\0\0\b\0\x1\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0}\xff\xff\xff\xff\0\0\0\x84\0\0\0\0\0\0\0\b\0\0\x1\x11\0\0\0\x1\0\0\0\0\0\0\0U\0\0\0\x1\0\0\0\0\0\0\x1S\0\0\0\x1\0\0\0\0\0\0\x1\x84\0\0\0\x1\0\0\0\0\0\0\0V\0\0\0\x1\0\0\0\0\0\0\0]\0\0\0\x1\0\0\0\0\0\0\0\x8b\0\0\0\x1\0\0\0\0\0\0\0I\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0})
 view_cover_art=true
 view_file_browser=false
@@ -84,7 +84,6 @@ fanarttv_client_key=
 fanarttv_use_cdart=noalbumart
 file_lookup_threshold=0.7
 file_naming_format="$if2(%albumartist%,%artist%)/\n$if(%albumartist%,%album%/,)\n$if($gt(%totaldiscs%,1),%discnumber% - ,)$if($and(%albumartist%,%tracknumber%),$num(%tracknumber%,2) - ,)%artist% - %title%"
-filebrowser_horizontal_autoscroll=true
 fingerprinting_system=acoustid
 folksonomy_tags=false
 genres_filter=-seen live\n-favorites\n-fixme\n-owned
@@ -95,7 +94,6 @@ ignore_file_mbids=false
 ignore_hidden_files=false
 ignore_regex=
 ignore_track_duration_difference_under=2
-interface_colors=@Variant(\0\0\0\b\0\0\0\n\0\0\0\"\0t\0\x61\0g\0s\0t\0\x61\0t\0u\0s\0_\0r\0\x65\0m\0o\0v\0\x65\0\x64\0\0\0\n\0\0\0\xe\0#\0\x66\0\x66\0\x30\0\x30\0\x30\0\x30\0\0\0\"\0t\0\x61\0g\0s\0t\0\x61\0t\0u\0s\0_\0\x63\0h\0\x61\0n\0g\0\x65\0\x64\0\0\0\n\0\0\0\xe\0#\0\x62\0\x38\0\x38\0\x36\0\x30\0\x62\0\0\0\x1e\0t\0\x61\0g\0s\0t\0\x61\0t\0u\0s\0_\0\x61\0\x64\0\x64\0\x65\0\x64\0\0\0\n\0\0\0\xe\0#\0\x30\0\x30\0\x38\0\x30\0\x30\0\x30\0\0\0\x16\0l\0o\0g\0_\0w\0\x61\0r\0n\0i\0n\0g\0\0\0\n\0\0\0\xe\0#\0\x66\0\x66\0\x38\0\x63\0\x30\0\x30\0\0\0\x10\0l\0o\0g\0_\0i\0n\0\x66\0o\0\0\0\n\0\0\0\xe\0#\0\x30\0\x30\0\x30\0\x30\0\x30\0\x30\0\0\0\x12\0l\0o\0g\0_\0\x65\0r\0r\0o\0r\0\0\0\n\0\0\0\xe\0#\0\x66\0\x66\0\x30\0\x30\0\x30\0\x30\0\0\0\x12\0l\0o\0g\0_\0\x64\0\x65\0\x62\0u\0g\0\0\0\n\0\0\0\xe\0#\0\x38\0\x30\0\x30\0\x30\0\x38\0\x30\0\0\0\x18\0\x65\0n\0t\0i\0t\0y\0_\0s\0\x61\0v\0\x65\0\x64\0\0\0\n\0\0\0\xe\0#\0\x30\0\x30\0\x61\0\x61\0\x30\0\x30\0\0\0\x1c\0\x65\0n\0t\0i\0t\0y\0_\0p\0\x65\0n\0\x64\0i\0n\0g\0\0\0\n\0\0\0\xe\0#\0\x38\0\x30\0\x38\0\x30\0\x38\0\x30\0\0\0\x18\0\x65\0n\0t\0i\0t\0y\0_\0\x65\0r\0r\0o\0r\0\0\0\n\0\0\0\xe\0#\0\x63\0\x38\0\x30\0\x30\0\x30\0\x30)
 itunes_compatible_grouping=false
 join_genres=
 list_of_scripts=@Invalid()
@@ -104,10 +102,9 @@ local_cover_regex=^(?:cover|folder|albumart)(.*)\\.(?:jpe?g|png|gif|tiff?)$
 max_genres=5
 min_genre_usage=90
 move_additional_files=true
-move_additional_files_pattern=*.jpg *.png *.cue *.toc *.m3u *.log *.mov *.m4v *.mpg source *.pdf
-move_files=true
+move_additional_files_pattern=*.jpg *.png *.cue *.toc *.m3u *.log *.mov *.m4v *.mpg source
+move_files=false
 move_files_to=/home/hbush/mp3s/NewMusic/library
-network_transfer_timeout_seconds=30
 only_my_genres=false
 preferred_release_countries=@Variant(\0\0\0\t\0\0\0\x1\0\0\0\n\0\0\0\x4\0G\0\x42)
 preferred_release_formats=@Invalid()
@@ -116,7 +113,6 @@ preserved_tags=@Variant(\0\0\0\t\0\0\0\x1\0\0\0\n\0\0\0\0)
 proxy_password=
 proxy_server_host=
 proxy_server_port=80
-proxy_type=http
 proxy_username=
 quit_confirmation=true
 rating_user_email=users@musicbrainz.org
@@ -127,7 +123,6 @@ remove_ape_from_aac=false
 remove_ape_from_ac3=false
 remove_ape_from_mp3=false
 remove_id3_from_flac=false
-remove_wave_riff_info=false
 rename_files=true
 save_images_overwrite=true
 save_images_to_files=true
@@ -146,14 +141,10 @@ toolbar_show_labels=true
 track_ars=false
 track_matching_threshold=0.4
 translate_artist_names=true
-ui_language=
 use_adv_search_syntax=false
 use_genres=false
 use_proxy=false
-use_system_theme=false
 va_name=Various Artists
-wave_riff_info_encoding=windows-1252
 windows_compatibility=false
 write_id3v1=true
 write_id3v23=true
-write_wave_riff_info=true
