--- a/.mediaconvrc
+++ b/.mediaconvrc
@@ -2,6 +2,6 @@
 /home/hbush/mp3s/ForPhone		/home/hbush/mp3s/ForPhoneConv		/home/hbush/bin/ringtonestrip.sh		mp3		mp3
 /home/hbush/mp3s/ForPhone		/home/hbush/mp3s/ForPhoneConv		/home/hbush/bin/wavtoringtone.sh		wav		mp3
 /home/hbush/flac/Music		/home/hbush/mp3s/Music		/home/hbush/bin/flac_to_mp3.sh		flac		mp3
+/home/hbush/mp3s/Comedy		/home/hbush/mp3s/ComedyComp		/home/hbush/bin/mp3tospeech.py		mp3		mp3
 /home/hbush/flac/Books		/home/hbush/mp3s/BooksComp		/home/hbush/bin/flac_to_speech.sh		flac		mp3
 /home/hbush/mp3s/Books		/home/hbush/mp3s/BooksComp		/home/hbush/bin/mp3tospeech.py		mp3		mp3
-#/home/hbush/mp3s/Comedy		/home/hbush/mp3s/ComedyComp		/home/hbush/bin/mp3tospeech.py		mp3		mp3
