--- a/MusicBrainz/Picard-2.5.6.ini
+++ b/MusicBrainz/Picard-2.5.6.ini
@@ -1,31 +1,31 @@
 [application]
-version=2.6.1.final0
+version=2.5.6.final0
 
 [persist]
 album_view_header_locked=false
-album_view_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x10\xf8?\0\0\0\v\0\0\0\x5\0\0\0\x64\0\0\0\x4\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\r\0\0\0\x64\0\0\0\f\0\0\0\x64\0\0\0\v\0\0\0\x64\0\0\0\n\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\x4\x83\0\0\0\x10\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x10\0\0\x2\xb5\0\0\0\x1\0\0\0\0\0\0\0R\0\0\0\x1\0\0\0\0\0\0\0\xb4\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x3\xe8\x1\0\0\0\x64)
+album_view_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x10\xf8?\0\0\0\v\0\0\0\x3\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\0\x4\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\v\0\0\0\x64\0\0\0\n\0\0\0\x64\0\0\0\r\0\0\0\x64\0\0\0\f\0\0\0\x64\0\0\x4\xca\0\0\0\x10\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x10\0\0\x2\xfc\0\0\0\x1\0\0\0\0\0\0\0R\0\0\0\x1\0\0\0\0\0\0\0\xb4\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x3\xe8\x1\0\0\0\x64)
 bottom_splitter_state=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\x1n\0\0\0\xca\0\xff\xff\xff\xff\x1\0\0\0\x2\0)
 current_browser_path=/home/hbush
 current_directory=/home/hbush/Music/S/Spray
 file_view_header_locked=false
-file_view_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\a\x1\0\0\0\x10\0\0\0\0\0\0\0\x3\0\0\0\x2\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\a\0\0\0\x1\0\0\0\b\0\0\0\t\0\0\0\n\0\0\0\v\0\0\0\f\0\0\0\r\0\0\0\xe\0\0\0\xf\0\0\0\x10\0\0\0\0\0\0\0\a\0\0\0\x2\0\0\0\x1\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\b\0\0\0\t\0\0\0\n\0\0\0\v\0\0\0\f\0\0\0\r\0\0\0\xe\0\0\0\xf\0\0\0\x10\xf0?\0\0\0\n\0\0\0\x5\0\0\0\x64\0\0\0\x4\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\r\0\0\0\x64\0\0\0\f\0\0\0\x64\0\0\0\v\0\0\0\x64\0\0\0\n\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\x6\x99\0\0\0\x10\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x10\0\0\x1\x64\0\0\0\x1\0\0\0\0\0\0\0X\0\0\0\x1\0\0\0\0\0\0\x1$\0\0\0\x1\0\0\0\0\0\0\x3#\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x32\0\0\0\x1\0\0\0\0\0\0\x3\xe8\x1\0\0\0\x32)
-geometry_AlbumInfoDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x3\xfb\0\0\x5\xaf\0\0\x6\x95\0\0\a{\0\0\x3\xfc\0\0\x5\xc7\0\0\x6\x94\0\0\az\0\0\0\0\0\0\0\0\a\x80\0\0\x3\xfc\0\0\x5\xc7\0\0\x6\x94\0\0\az)
+file_view_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\a\x1\0\0\0\x10\0\0\0\0\0\0\0\x3\0\0\0\x2\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\a\0\0\0\x1\0\0\0\b\0\0\0\t\0\0\0\n\0\0\0\v\0\0\0\f\0\0\0\r\0\0\0\xe\0\0\0\xf\0\0\0\x10\0\0\0\0\0\0\0\a\0\0\0\x2\0\0\0\x1\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\b\0\0\0\t\0\0\0\n\0\0\0\v\0\0\0\f\0\0\0\r\0\0\0\xe\0\0\0\xf\0\0\0\x10\xf0?\0\0\0\n\0\0\0\x3\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\0\x4\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\v\0\0\0\x64\0\0\0\n\0\0\0\x64\0\0\0\r\0\0\0\x64\0\0\0\f\0\0\0\x64\0\0\x6\x99\0\0\0\x10\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x10\0\0\x1\x64\0\0\0\x1\0\0\0\0\0\0\0X\0\0\0\x1\0\0\0\0\0\0\x1$\0\0\0\x1\0\0\0\0\0\0\x3#\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x32\0\0\0\x1\0\0\0\0\0\0\x3\xe8\x1\0\0\0\x32)
+geometry_AlbumInfoDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\xc2\0\0\x2k\0\0\x5\\\0\0\x4\x37\0\0\x2\xc3\0\0\x2\x83\0\0\x5[\0\0\x4\x36\0\0\0\0\0\0\0\0\a\x80\0\0\x2\xc3\0\0\x2\x83\0\0\x5[\0\0\x4\x36)
 geometry_CAATypesSelectorDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x30\0\0\x1?\0\0\x3\xd5\0\0\x3$\0\0\0\x31\0\0\x1W\0\0\x3\xd4\0\0\x3#\0\0\0\0\0\0\0\0\a\x80\0\0\0\x31\0\0\x1W\0\0\x3\xd4\0\0\x3#)
 geometry_ClusterInfoDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2i\0\0\x4T\0\0\x5\x3\0\0\x6 \0\0\x2j\0\0\x4l\0\0\x5\x2\0\0\x6\x1f\0\0\0\0\0\0\0\0\a\x80\0\0\x2j\0\0\x4l\0\0\x5\x2\0\0\x6\x1f)
 geometry_EditTagDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\xed\0\0\x1o\0\0\x4~\0\0\x2\x99\0\0\x2\xee\0\0\x1\x87\0\0\x4}\0\0\x2\x98\0\0\0\0\0\0\0\0\a\x80\0\0\x2\xee\0\0\x1\x87\0\0\x4}\0\0\x2\x98)
-geometry_FileInfoDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2i\0\0\0K\0\0\a\x15\0\0\x4\x37\0\0\x2j\0\0\0\x63\0\0\a\x14\0\0\x4\x36\0\0\0\0\0\0\0\0\a\x80\0\0\x2j\0\0\0\x63\0\0\a\x14\0\0\x4\x36)
-geometry_HistoryView=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6)
-geometry_LogView=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6)
-geometry_MainWindow=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\x4T\0\0\a\x7f\0\0\bj\0\0\x3H\0\0\x4G\0\0\a\x7f\0\0\v\xae\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\x4l\0\0\a\x7f\0\0\bj)
-geometry_OptionsDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2X\0\0\0X\0\0\x5y\0\0\x3 \0\0\x2Y\0\0\0p\0\0\x5x\0\0\x3\x1f\0\0\0\0\0\0\0\0\a\x80\0\0\x2Y\0\0\0p\0\0\x5x\0\0\x3\x1f)
-geometry_TrackInfoDialog="@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1\xcf\0\0\x5#\0\0\x4i\0\0\x6\xef\0\0\x1\xd0\0\0\x5;\0\0\x4h\0\0\x6\xee\0\0\0\0\0\0\0\0\a\x80\0\0\x1\xd0\0\0\x5;\0\0\x4h\0\0\x6\xee)"
+geometry_FileInfoDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2i\0\0\x4T\0\0\a\x15\0\0\b@\0\0\x2j\0\0\x4l\0\0\a\x14\0\0\b?\0\0\0\0\0\0\0\0\a\x80\0\0\x2j\0\0\x4l\0\0\a\x14\0\0\b?)
+geometry_HistoryView=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\x4\x17\0\0\x2\x39\0\0\x5\xa6\0\0\0\0\0\0\x4\x17\0\0\x2\x39\0\0\x5\xa6\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\x4\x17\0\0\x2\x39\0\0\x5\xa6)
+geometry_LogView=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\x4\x17\0\0\x2\x39\0\0\x5\xa6\0\0\0\0\0\0\x4\x17\0\0\x2\x39\0\0\x5\xa6\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\x4\x17\0\0\x2\x39\0\0\x5\xa6)
+geometry_MainWindow=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\x4$\0\0\a\x7f\0\0\b:\0\0\0\0\0\0\x4\x17\0\0\x4\xff\0\0\x6\x31\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\x4<\0\0\a\x7f\0\0\b:)
+geometry_OptionsDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2X\0\0\x1o\0\0\x5y\0\0\x4\x37\0\0\x2Y\0\0\x1\x87\0\0\x5x\0\0\x4\x36\0\0\0\0\0\0\0\0\a\x80\0\0\x2Y\0\0\x1\x87\0\0\x5x\0\0\x4\x36)
+geometry_TrackInfoDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2i\0\0\x1\x1e\0\0\x5\x3\0\0\x2\xea\0\0\x2j\0\0\x1\x36\0\0\x5\x2\0\0\x2\xe9\0\0\0\0\0\0\0\0\a\x80\0\0\x2j\0\0\x1\x36\0\0\x5\x2\0\0\x2\xe9)
 geometry_TrackSearchDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2M\0\0\x1\x44\0\0\x5\x1e\0\0\x2\xc4\0\0\x2N\0\0\x1\\\0\0\x5\x1d\0\0\x2\xc3\0\0\0\0\0\0\0\0\a\x80\0\0\x2N\0\0\x1\\\0\0\x5\x1d\0\0\x2\xc3)
 last_selected_script_pos=-1
 mediaplayer_playback_rate=1
 mediaplayer_volume=50
 metadatabox_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x6\xce\0\0\0\x3\0\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0}\xff\xff\xff\xff\0\0\0\x84\0\0\0\0\0\0\0\x3\0\0\x1.\0\0\0\x1\0\0\0\0\0\0\x1\xf0\0\0\0\x1\0\0\0\0\0\0\x3\xb0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0})
-oauth_access_token=gMLjsUQILpcnb0UxOjosTSXl0H3GPCrb
-oauth_access_token_expires=1619604808
+oauth_access_token=5V6Wbp6_ZbmcKiqRQYASc6pdlg5v5z2t
+oauth_access_token_expires=1631543889
 oauth_refresh_token=NONQz8_M_nEGPxLyag-Xhw
 oauth_refresh_token_scopes=profile tag rating collection submit_isrc submit_barcode
 oauth_username=spookypeanut
@@ -60,9 +60,11 @@ builtin_search=false
 ca_providers=@Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x1d\x80\x4\x95\x12\0\0\0\0\0\0\0\x8c\vLocal Files\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x1c\x80\x4\x95\x11\0\0\0\0\0\0\0\x8c\nTheAudioDB\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0#\x80\x4\x95\x18\0\0\0\0\0\0\0\x8c\x11\x43over Art Archive\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\"\x80\x4\x95\x17\0\0\0\0\0\0\0\x8c\x10UrlRelationships\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0!\x80\x4\x95\x16\0\0\0\0\0\0\0\x8c\xf\x43\x61\x61ReleaseGroup\x94\x88\x86\x94.), @Variant(\0\0\0\x7f\0\0\0\xePyQt_PyObject\0\0\0\0\x18\x80\x4\x95\r\0\0\0\0\0\0\0\x8c\x6\x41mazon\x94\x88\x86\x94.)
 caa_approved_only=false
 caa_image_size=500
+caa_image_type_as_filename=false
 caa_image_types=@Variant(\0\0\0\t\0\0\0\x1\0\0\0\n\0\0\0\n\0\x66\0r\0o\0n\0t)
 caa_image_types_to_omit=raw/unedited, watermark
 caa_restrict_image_types=true
+caa_save_single_front_image=false
 cd_lookup_device=/dev/cdrom
 clear_existing_tags=false
 cluster_lookup_threshold=0.7
@@ -93,7 +95,6 @@ ignore_file_mbids=false
 ignore_hidden_files=false
 ignore_regex=
 ignore_track_duration_difference_under=2
-image_type_as_filename=false
 interface_colors=@Variant(\0\0\0\b\0\0\0\n\0\0\0\"\0t\0\x61\0g\0s\0t\0\x61\0t\0u\0s\0_\0r\0\x65\0m\0o\0v\0\x65\0\x64\0\0\0\n\0\0\0\xe\0#\0\x66\0\x66\0\x30\0\x30\0\x30\0\x30\0\0\0\"\0t\0\x61\0g\0s\0t\0\x61\0t\0u\0s\0_\0\x63\0h\0\x61\0n\0g\0\x65\0\x64\0\0\0\n\0\0\0\xe\0#\0\x62\0\x38\0\x38\0\x36\0\x30\0\x62\0\0\0\x1e\0t\0\x61\0g\0s\0t\0\x61\0t\0u\0s\0_\0\x61\0\x64\0\x64\0\x65\0\x64\0\0\0\n\0\0\0\xe\0#\0\x30\0\x30\0\x38\0\x30\0\x30\0\x30\0\0\0\x16\0l\0o\0g\0_\0w\0\x61\0r\0n\0i\0n\0g\0\0\0\n\0\0\0\xe\0#\0\x66\0\x66\0\x38\0\x63\0\x30\0\x30\0\0\0\x10\0l\0o\0g\0_\0i\0n\0\x66\0o\0\0\0\n\0\0\0\xe\0#\0\x30\0\x30\0\x30\0\x30\0\x30\0\x30\0\0\0\x12\0l\0o\0g\0_\0\x65\0r\0r\0o\0r\0\0\0\n\0\0\0\xe\0#\0\x66\0\x66\0\x30\0\x30\0\x30\0\x30\0\0\0\x12\0l\0o\0g\0_\0\x64\0\x65\0\x62\0u\0g\0\0\0\n\0\0\0\xe\0#\0\x38\0\x30\0\x30\0\x30\0\x38\0\x30\0\0\0\x18\0\x65\0n\0t\0i\0t\0y\0_\0s\0\x61\0v\0\x65\0\x64\0\0\0\n\0\0\0\xe\0#\0\x30\0\x30\0\x61\0\x61\0\x30\0\x30\0\0\0\x1c\0\x65\0n\0t\0i\0t\0y\0_\0p\0\x65\0n\0\x64\0i\0n\0g\0\0\0\n\0\0\0\xe\0#\0\x38\0\x30\0\x38\0\x30\0\x38\0\x30\0\0\0\x18\0\x65\0n\0t\0i\0t\0y\0_\0\x65\0r\0r\0o\0r\0\0\0\n\0\0\0\xe\0#\0\x63\0\x38\0\x30\0\x30\0\x30\0\x30)
 itunes_compatible_grouping=false
 join_genres=
@@ -131,7 +132,6 @@ rename_files=true
 save_images_overwrite=true
 save_images_to_files=true
 save_images_to_tags=true
-save_only_one_front_image=false
 server_host=musicbrainz.org
 server_port=443
 standardize_artists=true
@@ -150,6 +150,7 @@ ui_language=
 use_adv_search_syntax=false
 use_genres=false
 use_proxy=false
+use_system_theme=false
 va_name=Various Artists
 wave_riff_info_encoding=windows-1252
 windows_compatibility=false
