--- a/.mediaconvrc
+++ b/.mediaconvrc
@@ -1,6 +1,7 @@
 #original_dir	converted_dir	conversion_command	orig_extension	converted_extension
 /home/hbush/mp3s/ForPhone		/home/hbush/mp3s/ForPhoneConv		/home/hbush/bin/ringtonestrip.sh		mp3		mp3
 /home/hbush/mp3s/ForPhone		/home/hbush/mp3s/ForPhoneConv		/home/hbush/bin/wavtoringtone.sh		wav		mp3
+/home/hbush/mp3s/ComedyFlac		/home/hbush/mp3s/ComedyComp		/home/hbush/bin/flac_to_speech.sh		flac		ogg
 /home/hbush/mp3s/Comedy		/home/hbush/mp3s/ComedyComp		/home/hbush/bin/mp3tospeech.py		mp3		mp3
 /home/hbush/mp3s/BooksFlac	/home/hbush/mp3s/BooksComp		/home/hbush/bin/flac_to_speech.sh		flac		ogg
 /home/hbush/mp3s/Books		/home/hbush/mp3s/BooksComp		/home/hbush/bin/mp3tospeech.py		mp3		mp3
